convert/objects/Rider_History__b.object
<CustomObject>
    <label>Rider History</label>
    <pluralLabel>Rider Histories</pluralLabel>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rider_Account__c</fullName>
        <label>Rider Account</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider_Rating__c</fullName>
        <label>Rider Rating</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Location_Latitude__c</fullName>
        <label>Start Location Latitude</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Location_Longitude__c</fullName>
        <label>Start Location Longitude</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <indexes>
        <fullName>Rider_History_Index</fullName>
        <fields>
            <name>Rider_Account__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>Start_Time__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>Rider History Index</label>
    </indexes>
</CustomObject>